--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_LOGS"/>
-
+    <uses-permission android:name="android.permission.READ_LOGS"/>
     <application
         android:name=".BqssApplication"
         android:allowBackup="true"
@@ -26,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+		//修改第一个地方
         <activity android:name=".ui.QuaterSearchActivity"
                   android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".ui.HalfSearchActivity"
@@ -36,6 +37,7 @@
                   android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".ui.FullSearchResultPage"
                   android:windowSoftInputMode="stateHidden"/>
+				  //修改第二个地方
     </application>
 
 </manifest>
